# webserver

./: .gitignore  CMakeLists.txt  README.md  Source.cpp
cgi-bin/: test.cgi  test.cpp
data/static/: index.html
server/: Consts.h  HTTPResponse.cpp  HTTPResponse.h  ParseRequest.cpp  ParseRequest.h  TCPServer.cpp  TCPServer.h
utils/: Log.cpp  Log.h  Settings.h
